// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders correctly with actions 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <div
            class="mt-2.5 flex shrink-0 items-start gap-1.5"
            data-slot="actions"
          >
            
            
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1 px-2 py-1 text-xs bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
              data-reka-toast-announce-alt="Retry"
              data-reka-toast-announce-exclude=""
              data-slot="base"
              type="button"
            >
              
              <!--v-if-->
              
              
              <span
                class="truncate"
                data-slot="label"
              >
                Retry
              </span>
              
              
              <!--v-if-->
              
            </button>
            
            
          </div>
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with actions and description 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <div
            class="text-sm whitespace-pre-line text-muted mt-1"
            data-slot="description"
          >
            
            
            Something went wrong.
            
            
          </div>
          <div
            class="mt-2.5 flex shrink-0 items-start gap-1.5"
            data-slot="actions"
          >
            
            
            <button
              aria-disabled="false"
              class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1 px-2 py-1 text-xs bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary"
              data-reka-toast-announce-alt="Retry"
              data-reka-toast-announce-exclude=""
              data-slot="base"
              type="button"
            >
              
              <!--v-if-->
              
              
              <span
                class="truncate"
                data-slot="label"
              >
                Retry
              </span>
              
              
              <!--v-if-->
              
            </button>
            
            
          </div>
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with actions slot 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <div
            class="mt-2.5 flex shrink-0 items-start gap-1.5"
            data-slot="actions"
          >
            
            
            Actions slot
            
            
          </div>
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with class 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset w-96"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with close slot 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        Close slot
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with color error 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-error focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-error"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with color neutral 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-inverted"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with color success 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-success focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-success"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with description 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <div
            class="text-sm whitespace-pre-line text-muted mt-1"
            data-slot="description"
          >
            
            
            This is a toast
            
            
          </div>
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with description slot 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <div
            class="text-sm whitespace-pre-line text-muted mt-1"
            data-slot="description"
          >
            
            
            
            Description slot
            
            
            
          </div>
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with title 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with title and description 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <div
            class="text-sm whitespace-pre-line text-muted mt-1"
            data-slot="description"
          >
            
            
            This is a toast
            
            
          </div>
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with title slot 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-medium"
            data-slot="title"
          >
            
            
            
            Title slot
            
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;

exports[`Toast > renders correctly with ui 1`] = `
<div>
  
  
  
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  
  <!--teleport start-->
  
  
  <div
    aria-label="Notifications (F8)"
    role="region"
    tabindex="-1"
  >
    
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    <ol
      class="right-0 bottom-0 z-100 flex max-w-[100vw] flex-col-reverse gap-4 p-4 outline-none static w-auto"
      data-slot="viewport"
      tabindex="-1"
    >
      
      
      
      <li
        aria-atomic="true"
        aria-live="off"
        class="group relative flex items-start gap-2.5 overflow-hidden rounded-lg bg-default p-4 shadow-lg ring ring-default focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
        data-reka-collection-item=""
        data-slot="root"
        data-state="open"
        data-swipe-direction="right"
        role="alert"
        style="user-select: none; touch-action: none;"
        tabindex="0"
      >
        
        
        <div
          class="flex w-0 flex-1 flex-col"
          data-slot="wrapper"
        >
          <div
            class="text-sm font-bold"
            data-slot="title"
          >
            
            
            Toast
            
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <button
          aria-disabled="false"
          aria-label="Close"
          class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm text-muted hover:text-default focus-visible:outline-inverted active:text-default p-0"
          data-reka-toast-announce-exclude=""
          data-slot="close"
          type="button"
        >
          
          <svg
            aria-hidden="true"
            class="shrink-0 size-4"
            data-slot="leadingIcon"
            height="1em"
            role="img"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
          
          
          <!--v-if-->
          
          
          <!--v-if-->
          
        </button>
        <div
          aria-label="100%"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="overflow-hidden rounded-full bg-accented w-full h-1 absolute inset-x-0 bottom-0"
          data-max="100"
          data-slot="progress"
          data-state="complete"
          data-value="100"
          role="progressbar"
          style="transform: translateZ(0px);"
        >
          
          <div
            class="size-full rounded-full data-[state=indeterminate]:animate-[carousel_2s_ease-in-out_infinite] bg-primary"
            data-max="100"
            data-slot="indicator"
            data-state="complete"
            data-value="100"
            style="transform: translateX(0%);"
          >
            
            
          </div>
          
        </div>
        
        
      </li>
      
    </ol>
    <span
      aria-hidden="true"
      style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); white-space: nowrap; overflow-wrap: normal; top: -1px; left: -1px;"
      tabindex="0"
    >
      
      
    </span>
    
  </div>
  
  
  <!--teleport end-->
  
</div>
`;
